--- a/src/styles.scss
+++ b/src/styles.scss
@@ -492,7 +492,7 @@ body{
     display: inline-flex!important;
 }
 
-.modal-content{
+/* .modal-content{
 background-color: #fff0db;
 color:#424242;
 border-radius:30px;
@@ -511,7 +511,7 @@ background-color:#e43012;
 color:white;
 border-radius:30px;
 border:solid 2px #e43012;
-}
+} */
 
 @media (max-width: 992px) {
     nav ul li{
