--- a/src/app/daily-menu/daily-menu-list/daily-menu-list.component.scss
+++ b/src/app/daily-menu/daily-menu-list/daily-menu-list.component.scss
@@ -2,3 +2,11 @@
     table-layout: fixed;
     margin-top: 1rem;
 }
+
+.customPaddingbottom{
+    padding-bottom:20px;
+    }
+
+ .PaginationBackground{
+        background-color: #c7cbaf;
+        }
