--- a/src/app/order/order-list/order-list.component.scss
+++ b/src/app/order/order-list/order-list.component.scss
@@ -3,6 +3,14 @@ font-family: 'Spinnaker', sans-serif !important;
 }
 
 h6{
-font-size:13px;
+padding-top:20px!important;
+text-decoration:underline;
+}
 
+.PaginationBackground{
+    background-color: #c7cbaf;
+    }
+
+.customDate{
+padding-top:20px;
 }
