--- a/src/app/stock-control/stock-control.component.scss
+++ b/src/app/stock-control/stock-control.component.scss
@@ -1,3 +1,12 @@
 form{
 width:500px;
 }
+
+
+.customPaddingbottom{
+    padding-bottom:20px;
+    }
+
+.PaginationBackground{
+        background-color: #c7cbaf;
+        }
