--- a/src/app/category/category-list/category.component.css
+++ b/src/app/category/category-list/category.component.css
@@ -27,3 +27,11 @@
 .left {
     float: left;
 }
+
+.customPaddingbottom{
+    padding-bottom:20px;
+    }
+   
+.PaginationBackground{
+        background-color: #c7cbaf;
+        }
