--- a/src/app/category/category-list/category.component.html
+++ b/src/app/category/category-list/category.component.html
@@ -25,13 +25,14 @@
 <div class="ml-5 mr-5 pl-5 pr-5  pt-1 pb-2 mt-2 text-center">
   <div class="row mb-2 customBox">
     <form #form="ngForm" novalidate class="form-inline col-md-12 col-lg-12">
+      <img src="assets/img/filtros.png" height="40px" width="auto">
       <h6 class="pt-2">Filtrar:</h6>
-      <div class="md-form form-group mr-0 ml-0 col-md-3 col-lg-3">
+      <div class="md-form form-group mr-0 ml-0 col-md-3 col-lg-3 customPaddingbottom">
         <input type="text" class="input-alternate" placeholder="Nombre" name="query" [(ngModel)]='listFilter'
           id="query">
       </div>
       <h6 class="pt-2">Categorias para el menu:</h6>
-      <div class="md-form form-group mr-2 col-md-2 col-lg-2 text-left">
+      <div class="md-form form-group mr-2 col-md-2 col-lg-2 text-left customPaddingbottom">
         <mdb-select #queryMenu name="queryMenu" (selected)="filterMenu(queryMenu.value)" id="queryMenu"
           [options]="menusSelect" [(ngModel)]="selectedValue" placeholder="Choose your option"
           class="colorful-select dropdown-primary"></mdb-select>
@@ -67,7 +68,7 @@
           </td>
         </tr>
       </tbody>
-      <tfoot class="grey lighten-5 w-100">
+      <tfoot class="PaginationBackground w-100">
         <tr>
           <td colspan="4">
             <mdb-table-pagination [tableEl]="tableEl" [searchDataSource]="filteredCategories"></mdb-table-pagination>
