--- a/src/app/daily-menu/daily-menu-list/daily-menu-list.component.html
+++ b/src/app/daily-menu/daily-menu-list/daily-menu-list.component.html
@@ -26,8 +26,9 @@
 <div class="ml-5 mr-5 pl-5 pr-5 pt-1 pb-2 mt-2 text-center">
   <div class="row mb-2 pl-2 pr-2 pb-1 pt-1 customBox">
     <form #form="ngForm" novalidate class="form-inline">
+      <img src="assets/img/filtros.png" height="40px" width="auto">
       <h6 class="pt-2">Filtrar:</h6>
-      <div class="md-form form-group mr-0 ml-0 col-md-2 col-lg-2">
+      <div class="md-form form-group mr-0 ml-0 col-md-2 col-lg-2 customPaddingbottom">
         <input type="text" class="input-alternate" placeholder="Nombre" name="query" [(ngModel)]='listFilter'
           id="query">
       </div>
@@ -60,7 +61,7 @@
           </td>
         </tr>
       </tbody>
-      <tfoot class="grey lighten-5 w-100">
+      <tfoot class="PaginationBackground w-100">
         <tr>
           <td colspan="4">
             <mdb-table-pagination [tableEl]="tableEl" [searchDataSource]="filteredDailyMenus"></mdb-table-pagination>
