--- a/src/app/daily-menu/daily-menu-new/daily-menu-new.component.html
+++ b/src/app/daily-menu/daily-menu-new/daily-menu-new.component.html
@@ -80,8 +80,9 @@
           <div class="ml-2 mr-2 pl-3 pr-3 pt-1 pb-2 mt-2 text-center">
             <div class="row mb-2 card pl-2 pr-2 pb-1 pt-1 customBox">
               <form #form="ngForm" novalidate class="form-inline ">
+                <img src="assets/img/filtros.png" height="40px" width="auto">
                 <h6 class="pt-2">Filtrar:</h6>
-                <div class="md-form form-group mr-0 ml-0 col-md-2 col-lg-2">
+                <div class="md-form form-group mr-0 ml-0 col-md-2 col-lg-2 customPaddingbottom">
                   <input type="text" class="input-alternate" placeholder="Nombre" name="query" [(ngModel)]='listFilter'
                     id="query">
                 </div>
@@ -107,7 +108,7 @@
                     </td>
                   </tr>
                 </tbody>
-                <tfoot class="grey lighten-5 w-100">
+                <tfoot class="PaginationBackground w-100">
                   <tr>
                     <td colspan="2">
                       <mdb-table-pagination [tableEl]="tableEl" [searchDataSource]="filteredProductArray">
@@ -132,7 +133,7 @@
         </div>
       </div>
     </div>
-    <div class="row col-md-4 col-lg-4 col-xl-4 col-sm-6 float-right mt-5">
+    <div class="row col-md-12 col-lg-12 col-xl-4 col-sm-6 float-right mt-5">
       <ul>
         <li>
           <button mdbBtn role="button" rounded="true" size="md" mdbWavesEffect [class.btn-primary-custom]="true"
