--- a/src/app/daily-menu/daily-menu-new/daily-menu-new.component.scss
+++ b/src/app/daily-menu/daily-menu-new/daily-menu-new.component.scss
@@ -10,3 +10,11 @@
 ul li {
   display:inline-block!important;
 }
+
+.customPaddingbottom{
+  padding-bottom:20px;
+  }  
+
+  .PaginationBackground{
+    background-color: #c7cbaf;
+    }
