--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -25,8 +25,9 @@
 <div class="ml-5 mr-5 pl-5 pr-5 pt-1 pb-2 mt-2 text-center">
   <div class="row mb-2 customBox">
     <form #form="ngForm" novalidate class="form-inline customForm">
+      <img src="assets/img/filtros.png" height="40px" width="auto">
       <h6 class="pt-2">Filtrar:</h6>
-      <div class="md-form form-group mr-0 ml-0 col-md-10 col-lg-10">
+      <div class="md-form form-group mr-0 ml-0 col-md-8 col-lg-8 customPaddingbottom">
         <input type="text" class="input-alternate" placeholder="Nombre" name="query" [(ngModel)]='listFilter'
           id="query">
       </div>
