--- a/src/app/payment-type/payment-type-list/payment-type-list.component.html
+++ b/src/app/payment-type/payment-type-list/payment-type-list.component.html
@@ -35,8 +35,9 @@
         <div class="ml-5 mr-5 pl-5 pr-5  pt-1 pb-2 mt-2 text-center">
             <div class="row mb-2 customBox">
                 <form #form="ngForm" novalidate class="form-inline col-md-12 col-lg-12">
+                    <img src="assets/img/filtros.png" height="40px" width="auto">
                     <h6 class="pt-2">Filtrar:</h6>
-                    <div class="md-form form-group mr-0 ml-0 col-md-6 col-lg-6">
+                    <div class="md-form form-group mr-0 ml-0 col-md-6 col-lg-6 customPaddingbottom">
                         <input type="text" class="input-alternate" placeholder="Nombre" name="query"
                             [(ngModel)]='listFilter' id="query">
                     </div>
