--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -26,17 +26,18 @@
 <div class="ml-5 mr-5 pl-5 pr-5 pt-1 pb-2 mt-2 text-center">
   <div class="row mb-2 pl-2 pr-2 pb-1 pt-1 customBox">
     <form #form="ngForm" novalidate class="form-inline">
+      <img src="assets/img/filtros.png" height="40px" width="auto">
       <h6 class="pt-2">Filtrar:</h6>
-      <div class="md-form form-group mr-0 pr-0 col-lg-1 col-md-1">
+      <div class="md-form form-group mr-0 pr-0 col-lg-1 col-md-1 customPaddingbottom">
         <input type="text" class="input-alternate" placeholder="Codigo" name="queryCod" [(ngModel)]='listFilterCod'
           id="queryCod">
       </div>
-      <div class="md-form form-group mr-0 ml-0 col-md-2 col-lg-2">
+      <div class="md-form form-group mr-0 ml-0 col-md-2 col-lg-2 customPaddingbottom">
         <input type="text" class="input-alternate" placeholder="Nombre" name="query" [(ngModel)]='listFilter'
           id="query">
       </div>
-      <h6 class="pt-2 ml-2">Categoria:</h6>
-      <div class="md-form form-group mr-2 col-md-2 col-lg-2 text-left">
+      <h6 class="pt-2 ml-2 customPaddingLeft">Categoria:</h6>
+      <div class="md-form form-group mr-2 col-md-2 col-lg-2 text-left customPaddingbottom">
         <mdb-select #queryCategory name="queryCategory" (selected)="filterByCategoria(queryCategory.value)"
           id="queryCategory" [options]="categoriesOptions" [(ngModel)]="selectedValue" placeholder="Choose your option"
           class="colorful-select dropdown-primary"></mdb-select>
@@ -91,7 +92,7 @@
           </td>
         </tr>
       </tbody>
-      <tfoot class="grey lighten-5 w-100">
+      <tfoot class="PaginationBackground w-100">
         <tr>
           <td colspan="7">
             <mdb-table-pagination [tableEl]="tableEl" [searchDataSource]="filteredProducts">
