--- a/src/app/size/size-list/size-list.component.html
+++ b/src/app/size/size-list/size-list.component.html
@@ -28,8 +28,9 @@
       <div class="col-md-12 col-lg-12 col-sm-12 pl-5 pr-5 pt-4 pb-2 mt-2 text-center">
         <div class="row mb-2 customBox">
           <form #form="ngForm" novalidate class="form-inline col-md-12 col-lg-12">
+            <img src="assets/img/filtros.png" height="40px" width="auto">
             <h6 class="pt-2">Filtrar:</h6>
-            <div class="md-form form-group mr-0 ml-0 col-md-3 col-lg-3">
+            <div class="md-form form-group mr-0 ml-0 col-md-3 col-lg-3 customPaddingbottom">
               <input type="text" class="input-alternate" placeholder="Nombre" name="query" [(ngModel)]='listFilter'
                 id="query">
             </div>
