--- a/src/app/stock-control/stock-control.component.html
+++ b/src/app/stock-control/stock-control.component.html
@@ -17,8 +17,9 @@
       <div class="col-md-12 col-lg-12 col-sm-12 pl-5 pr-5 pt-1 pb-2 mt-2 text-center">
         <div class="row mb-2 customBox pt-1 pb-2 mt-2 text-center">
           <form #form="ngForm" novalidate class="form-inline">
+            <img src="assets/img/filtros.png" height="40px" width="auto">
             <h6 class="pt-2">{{ filterLabel }}</h6>
-            <div class="md-form form-group mr-0 ml-0 col-md-7 col-lg-7">
+            <div class="md-form form-group mr-0 ml-0 col-md-7 col-lg-7 customPaddingbottom">
               <input type="text" class="input-alternate" placeholder="Nombre" name="query" [(ngModel)]='listFilter'
                 id="query">
             </div>
@@ -53,7 +54,7 @@
                 </td>
               </tr>
             </tbody>
-            <tfoot class="grey lighten-5 w-100">
+            <tfoot class="PaginationBackground w-100">
               <tr>
                 <td colspan="5">
                   <mdb-table-pagination [tableEl]="tableEl" [searchDataSource]="filteredProducts">
