--- a/src/app/menu/menu-modify/menu-modify.component.html
+++ b/src/app/menu/menu-modify/menu-modify.component.html
@@ -17,7 +17,7 @@
 
 <!-- Form -->
 <div class="container" *ngIf='menu'>
-  <header class="major" align="center">
+  <header class="major">
     <h2>Editando: {{menuNameModified}}</h2>
   </header>
 
@@ -52,7 +52,7 @@
         </div>
 
         <div>
-          <ul align="center">
+          <ul>
             <li>
               <button id="cancel" mdbBtn role="button" rounded="true" size="md" mdbWavesEffect
                 [class.btn-primary-custom]="true" type="button" class="boton-cancelar"
