--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -28,7 +28,7 @@
     <form #form="ngForm" novalidate class="form-inline">
       <img src="assets/img/filtros.png" height="40px" width="auto">
       <h6 class="pt-2">Filtrar:</h6>
-      <div class="md-form form-group mr-0 ml-0 col-md-2 col-lg-2">
+      <div class="md-form form-group mr-0 ml-0 col-md-2 col-lg-2 customPaddingbottom">
         <input type="text" class="input-alternate" placeholder="Nombre" name="query" [(ngModel)]='listFilter'
           id="query">
       </div>
