--- a/src/app/order/order-list/order-list.component.scss
+++ b/src/app/order/order-list/order-list.component.scss
@@ -2,10 +2,6 @@
 font-family: 'Spinnaker', sans-serif !important;
 }
 
-h6{
-padding-top:20px!important;
-text-decoration:underline;
-}
 
 .PaginationBackground{
     background-color: #c7cbaf;
@@ -14,3 +10,12 @@ text-decoration:underline;
 .customDate{
 padding-top:20px;
 }
+
+label{
+color:#718239;
+padding-top:5px;
+}
+
+tbody{
+    background-color: #FFFAF0;
+    }
