--- a/src/app/section/section-list-config/section-list-config.component.scss
+++ b/src/app/section/section-list-config/section-list-config.component.scss
@@ -1,3 +1,12 @@
 .customPaddingbottom{
     padding-bottom:20px;
     }
+
+.pt-2{
+        padding-left:10px;
+      }
+
+    
+tbody{
+  background-color: #FFFAF0;
+  }
