--- a/src/app/stock-control/stock-control.component.scss
+++ b/src/app/stock-control/stock-control.component.scss
@@ -10,3 +10,11 @@ width:500px;
 .PaginationBackground{
         background-color: #c7cbaf;
         }
+
+.pt-2{
+       padding-left:10px;
+          }
+
+tbody{
+    background-color: #FFFAF0;
+     }
