--- a/src/app/user-roles/user-roles-new/user-roles-new.component.html
+++ b/src/app/user-roles/user-roles-new/user-roles-new.component.html
@@ -44,7 +44,7 @@
   </form>
 </div>
 <div class="col-12">
-  <div class="col-7 offset-5">
+  <div class="col-lg-12 col-md-12">
     <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.customButtonCancel]="true"
       (click)="showModalCancel(cancelTemplate)">{{ 'Commons.Buttons.cancel' | translate }}</button>
     <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true"
