--- a/src/app/user/user-new/user-new.component.html
+++ b/src/app/user/user-new/user-new.component.html
@@ -114,7 +114,7 @@
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0 ">
           <mdb-select #roleId formControlName="roleId" (selected)="selectUserRole(roleId.value)"
-            [options]="userRolesSelect" placeholder="Choose your option"
+            [options]="userRolesSelect" placeholder="Elije un Rol"
             [class.is-invalid]="userForm.get('roleId').invalid && (userForm.get('roleId').dirty || userForm.get('roleId').touched)"
             id="roleId"></mdb-select>
         </div>
@@ -136,8 +136,12 @@
 <br>
 <br>
 <br>
+<br>
+<br>
+<br>
+<br>
 <div class="col-12">
-  <div class="col-7 offset-5">
+  <div class="col-lg-12 col-md-12">
     <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.customButtonCancel]="true"
       (click)="showModalCancel(cancelTemplate)">{{ 'Commons.Buttons.cancel' | translate }}</button>
     <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [disabled]="userForm.invalid || passwordNotMatch() || pinNotMatch"
