--- a/src/app/order/order-close/order-close.component.scss
+++ b/src/app/order/order-close/order-close.component.scss
@@ -109,3 +109,24 @@
 .text-red{
     color:red;
 }
+
+.partialClose {
+  margin-top: 2rem;
+}
+
+.addUser {
+  margin-left: .5rem!important;
+}
+
+.warningMsg {
+  color: #e43012;
+  font-size: 1rem;
+  margin-top: 1rem!important;
+  margin-bottom: 1rem!important;
+  margin-left: 2rem!important;
+}
+
+.productLine{
+  border-bottom: solid 1px #d0d0d0;
+  padding-top: .5rem;
+}
