Minor changes table edit

--- a/src/app/table/table-list/table-list.component.html
+++ b/src/app/table/table-list/table-list.component.html
@@ -20,7 +20,7 @@
 </ng-template>
 
 <ng-template #editTemplate>
-  <div class="container col-md-12">
+  <div class="col-md-12">
     <div class="row pageTitle primary-color">
       <div class="col-md-12">
         <h4 class="text-white text-center mb-0">{{editModalTitle + ' ' + tableToEdit.number}}</h4>
