Fix category and product filters

--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -29,14 +29,14 @@
       <img src="assets/img/filtros.png" height="40px" width="auto">
       <h6 class="pt-2">Filtrar:</h6>
       <div class="md-form form-group mr-0 ml-0 col-md-2 col-lg-2 customPaddingbottom">
-        <input type="text" class="input-alternate" placeholder="Nombre" name="query" [(ngModel)]='listFilter'
+        <input type="text" class="input-alternate" placeholder="Nombre" name="query" [(ngModel)]='productName'
           id="query">
       </div>
       <h6 class="pt-2 ml-2 customPaddingLeft">Categoria:</h6>
       <div class="md-form form-group mr-2 col-md-2 col-lg-2 text-left customPaddingbottom">
-        <mdb-select #queryCategory name="queryCategory" (selected)="filterByCategoria(queryCategory.value)"
-          id="queryCategory" [options]="categoriesOptions" [(ngModel)]="selectedValue" placeholder="Choose your option"
-          class="colorful-select dropdown-primary"></mdb-select>
+        <mdb-select #queryCategory name="queryCategory" id="queryCategory" [options]="categoriesOptions"
+          [(ngModel)]="categoryProduct" placeholder="Choose your option" class="colorful-select dropdown-primary">
+        </mdb-select>
       </div>
       <h6 class="pt-2 ml-2">Actualizar Precios:</h6>
       <div class="ml-1 col-md-2 mr-0 md-form form-group">
@@ -54,7 +54,7 @@
   <div class="row">
     <table class="table table-bordered table-hover customTable" mdbTable #tableEl="mdbTable">
       <thead class="primary-color customTableText">
-        <tr>          
+        <tr>
           <th class="customLongTh">Nombre</th>
           <th class="customShortTh">Precio</th>
           <th>Categoría</th>
@@ -64,7 +64,8 @@
         </tr>
       </thead>
       <tbody class="table-wrapper" *ngIf='products && products.length'>
-        <tr *ngFor='let product of filteredProducts; let i = index'>
+        <tr
+          *ngFor='let product of filteredProducts | productSearch: productName:categoryProduct; let i = index'>
           <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
             class="align-middle customLongTh">{{ product.name }}</td>
           <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
