--- a/src/app/category/category-list/category.component.html
+++ b/src/app/category/category-list/category.component.html
@@ -17,7 +17,7 @@
   </div>
   <div style="float: right">
     <a [routerLink]="['newCategory']" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect
-      [class.btn-primary-custom]="true" [class.customButton]="true" mdbRippleRadius *ngIf='enableNew'> 
+      [class.btn-primary-custom]="true" [class.customButton]="true" mdbRippleRadius *ngIf='enableNew'>
       + Nueva Categoria
     </a>
   </div>
@@ -28,14 +28,13 @@
       <img src="assets/img/filtros.png" height="40px" width="auto">
       <h6 class="pt-2">Filtrar:</h6>
       <div class="md-form form-group mr-0 ml-0 col-md-3 col-lg-3 customPaddingbottom">
-        <input type="text" class="input-alternate" placeholder="Nombre" name="query" [(ngModel)]='listFilter'
+        <input type="text" class="input-alternate" placeholder="Nombre" name="query" [(ngModel)]='categoryName'
           id="query">
       </div>
       <h6 class="pt-2">Categorias para el menu:</h6>
       <div class="md-form form-group mr-2 col-md-2 col-lg-2 text-left customPaddingbottom">
-        <mdb-select #queryMenu name="queryMenu" (selected)="filterMenu(queryMenu.value)" id="queryMenu"
-          [options]="menusSelect" [(ngModel)]="selectedValue" placeholder="Choose your option"
-          class="colorful-select dropdown-primary"></mdb-select>
+        <mdb-select #queryMenu name="queryMenu" id="queryMenu" [options]="menusSelect" [(ngModel)]="categoryMenu"
+          placeholder="Choose your option" class="colorful-select dropdown-primary"></mdb-select>
       </div>
     </form>
   </div>
@@ -51,7 +50,8 @@
         </tr>
       </thead>
       <tbody class="table-wrapper" *ngIf='categories && categories.length'>
-        <tr *ngFor='let category of filteredCategories; let i = index'>
+        <tr
+          *ngFor='let category of filteredCategories | categorySearch: categoryName:categoryMenu; let i = index'>
           <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>
             {{category.name}}</td>
           <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>
